--- a/Example_Finding_Tangent_Disk.ipynb
+++ b/Example_Finding_Tangent_Disk.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,37 +219,62 @@
        "                   endpoints[1][0],\n",
        "                   endpoints[1][1]);\n",
        "        }\n",
-       "\n",
+       "        \n",
+       "        p.drawCircleArcE2 = function (arcData) {\n",
+       "            let center = arcData[\"center\"];\n",
+       "            let radius = arcData[\"radius\"];\n",
+       "            let srcAngle = arcData[\"srcAngle\"];\n",
+       "            let targetAngle = arcData[\"targetAngle\"];\n",
+       "            let diameter = 2 * radius;\n",
+       "            \n",
+       "            p.arc(center[0], center[1], diameter, diameter, srcAngle, targetAngle);\n",
+       "        }\n",
+       "/*\n",
+       "\"center\": arc.disk.center.toPointE2(), \n",
+       "                      \"radius\": rad,\n",
+       "                      \"srcAngle\": srcAngle, \n",
+       "                      \"targetAngle\": targetAngle}\n",
+       "                      */\n",
        "        p.draw = function () {\n",
        "            \n",
-       "            p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
-       "            p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
-       "            \n",
-       "            if (_DEBUG) console.log(\"DRAWING\"); \n",
        "            if (model.get('objectsDirty')) {\n",
        "                model.set('objectsDirty', false);\n",
        "                p.objs = JSON.parse(model.get('objects'));\n",
+       "                \n",
+       "                \n",
+       "                p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
+       "                p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
+       "                \n",
+       "            \n",
+       "                p.background('#fff');\n",
+       "\n",
+       "                p.objs.forEach(obj => {\n",
+       "                    p.push();\n",
+       "                    if (\"style\" in obj && obj[\"style\"] != null) {\n",
+       "                        p.setStyle(obj[\"style\"]);\n",
+       "                    }\n",
+       "                    switch (obj[\"type\"]) {\n",
+       "                        case \"PointE2\": p.drawPointE2(obj); break;\n",
+       "                        case \"Polygons\": p.drawPolygons(obj); break;\n",
+       "                        case \"Polygon\": p.drawPolygon(obj); break;\n",
+       "                        case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
+       "                        case \"CircleE2\": p.drawCircleE2(obj); break;\n",
+       "                        case \"CircleArcE2\": p.drawCircleArcE2(obj); break;\n",
+       "                        default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
+       "                    }\n",
+       "                    p.pop();\n",
+       "                });\n",
+       "                \n",
+       "                p.noLoop();\n",
        "            }\n",
        "            \n",
-       "            p.background('#fff');\n",
-       "            \n",
-       "            p.objs.forEach(obj => {\n",
-       "                p.push();\n",
-       "                if (\"style\" in obj && obj[\"style\"] != null) {\n",
-       "                    p.setStyle(obj[\"style\"]);\n",
-       "                }\n",
-       "                switch (obj[\"type\"]) {\n",
-       "                    case \"PointE2\": p.drawPointE2(obj); break;\n",
-       "                    case \"Polygons\": p.drawPolygons(obj); break;\n",
-       "                    case \"Polygon\": p.drawPolygon(obj); break;\n",
-       "                    case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
-       "                    case \"CircleE2\": p.drawCircleE2(obj); break;\n",
-       "                    default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
-       "                }\n",
-       "                p.pop();\n",
-       "            });\n",
-       "            \n",
-       "        } \n",
+       "        }\n",
+       "        \n",
+       "        p.keyTyped = function () {\n",
+       "          if (key === 'e') {\n",
+       "            photo.save('photo', 'png');\n",
+       "          }\n",
+       "        }\n",
        "    };\n",
        "})"
       ],
@@ -263,7 +288,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "465431f036b144aeb329520273edfd27",
+       "model_id": "8be0d335093b4ef6b006f039b7b87e0a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -491,37 +516,62 @@
        "                   endpoints[1][0],\n",
        "                   endpoints[1][1]);\n",
        "        }\n",
-       "\n",
+       "        \n",
+       "        p.drawCircleArcE2 = function (arcData) {\n",
+       "            let center = arcData[\"center\"];\n",
+       "            let radius = arcData[\"radius\"];\n",
+       "            let srcAngle = arcData[\"srcAngle\"];\n",
+       "            let targetAngle = arcData[\"targetAngle\"];\n",
+       "            let diameter = 2 * radius;\n",
+       "            \n",
+       "            p.arc(center[0], center[1], diameter, diameter, srcAngle, targetAngle);\n",
+       "        }\n",
+       "/*\n",
+       "\"center\": arc.disk.center.toPointE2(), \n",
+       "                      \"radius\": rad,\n",
+       "                      \"srcAngle\": srcAngle, \n",
+       "                      \"targetAngle\": targetAngle}\n",
+       "                      */\n",
        "        p.draw = function () {\n",
        "            \n",
-       "            p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
-       "            p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
-       "            \n",
-       "            if (_DEBUG) console.log(\"DRAWING\"); \n",
        "            if (model.get('objectsDirty')) {\n",
        "                model.set('objectsDirty', false);\n",
        "                p.objs = JSON.parse(model.get('objects'));\n",
+       "                \n",
+       "                \n",
+       "                p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
+       "                p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
+       "                \n",
+       "            \n",
+       "                p.background('#fff');\n",
+       "\n",
+       "                p.objs.forEach(obj => {\n",
+       "                    p.push();\n",
+       "                    if (\"style\" in obj && obj[\"style\"] != null) {\n",
+       "                        p.setStyle(obj[\"style\"]);\n",
+       "                    }\n",
+       "                    switch (obj[\"type\"]) {\n",
+       "                        case \"PointE2\": p.drawPointE2(obj); break;\n",
+       "                        case \"Polygons\": p.drawPolygons(obj); break;\n",
+       "                        case \"Polygon\": p.drawPolygon(obj); break;\n",
+       "                        case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
+       "                        case \"CircleE2\": p.drawCircleE2(obj); break;\n",
+       "                        case \"CircleArcE2\": p.drawCircleArcE2(obj); break;\n",
+       "                        default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
+       "                    }\n",
+       "                    p.pop();\n",
+       "                });\n",
+       "                \n",
+       "                p.noLoop();\n",
        "            }\n",
        "            \n",
-       "            p.background('#fff');\n",
-       "            \n",
-       "            p.objs.forEach(obj => {\n",
-       "                p.push();\n",
-       "                if (\"style\" in obj && obj[\"style\"] != null) {\n",
-       "                    p.setStyle(obj[\"style\"]);\n",
-       "                }\n",
-       "                switch (obj[\"type\"]) {\n",
-       "                    case \"PointE2\": p.drawPointE2(obj); break;\n",
-       "                    case \"Polygons\": p.drawPolygons(obj); break;\n",
-       "                    case \"Polygon\": p.drawPolygon(obj); break;\n",
-       "                    case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
-       "                    case \"CircleE2\": p.drawCircleE2(obj); break;\n",
-       "                    default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
-       "                }\n",
-       "                p.pop();\n",
-       "            });\n",
-       "            \n",
-       "        } \n",
+       "        }\n",
+       "        \n",
+       "        p.keyTyped = function () {\n",
+       "          if (key === 'e') {\n",
+       "            photo.save('photo', 'png');\n",
+       "          }\n",
+       "        }\n",
        "    };\n",
        "})"
       ],
@@ -535,7 +585,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4801a117a264c3f91b2fb0e292641c4",
+       "model_id": "1f3089874fca4984b8d7d62700c14b79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -574,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,9 +667,9 @@
     "    # Under the transformation above, we are now just looking for a circle that is tangent vertical lines\n",
     "    # through (0, 0) and (1, 0) and the circle centered at (0.5, 0) with radius 0.5 This is now very easy\n",
     "    # and the three points of tangency of that circle are w1, w2, w3 given below. \n",
-    "    w1b = ExtendedComplex(complex(0.0, 1.0))\n",
-    "    w2b = ExtendedComplex(complex(0.5, 0.5))\n",
-    "    w3b = ExtendedComplex(complex(1.0, 1.0))\n",
+    "    w1b = ExtendedComplex(complex(0.0, -1.0))\n",
+    "    w2b = ExtendedComplex(complex(0.5, -0.5))\n",
+    "    w3b = ExtendedComplex(complex(1.0, -1.0))\n",
     "\n",
     "    # Apply the inverse Möbius transformation to the three points of tangency to get them in our\n",
     "    # original picture. \n",
@@ -632,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -799,37 +849,62 @@
        "                   endpoints[1][0],\n",
        "                   endpoints[1][1]);\n",
        "        }\n",
-       "\n",
+       "        \n",
+       "        p.drawCircleArcE2 = function (arcData) {\n",
+       "            let center = arcData[\"center\"];\n",
+       "            let radius = arcData[\"radius\"];\n",
+       "            let srcAngle = arcData[\"srcAngle\"];\n",
+       "            let targetAngle = arcData[\"targetAngle\"];\n",
+       "            let diameter = 2 * radius;\n",
+       "            \n",
+       "            p.arc(center[0], center[1], diameter, diameter, srcAngle, targetAngle);\n",
+       "        }\n",
+       "/*\n",
+       "\"center\": arc.disk.center.toPointE2(), \n",
+       "                      \"radius\": rad,\n",
+       "                      \"srcAngle\": srcAngle, \n",
+       "                      \"targetAngle\": targetAngle}\n",
+       "                      */\n",
        "        p.draw = function () {\n",
        "            \n",
-       "            p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
-       "            p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
-       "            \n",
-       "            if (_DEBUG) console.log(\"DRAWING\"); \n",
        "            if (model.get('objectsDirty')) {\n",
        "                model.set('objectsDirty', false);\n",
        "                p.objs = JSON.parse(model.get('objects'));\n",
+       "                \n",
+       "                \n",
+       "                p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
+       "                p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
+       "                \n",
+       "            \n",
+       "                p.background('#fff');\n",
+       "\n",
+       "                p.objs.forEach(obj => {\n",
+       "                    p.push();\n",
+       "                    if (\"style\" in obj && obj[\"style\"] != null) {\n",
+       "                        p.setStyle(obj[\"style\"]);\n",
+       "                    }\n",
+       "                    switch (obj[\"type\"]) {\n",
+       "                        case \"PointE2\": p.drawPointE2(obj); break;\n",
+       "                        case \"Polygons\": p.drawPolygons(obj); break;\n",
+       "                        case \"Polygon\": p.drawPolygon(obj); break;\n",
+       "                        case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
+       "                        case \"CircleE2\": p.drawCircleE2(obj); break;\n",
+       "                        case \"CircleArcE2\": p.drawCircleArcE2(obj); break;\n",
+       "                        default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
+       "                    }\n",
+       "                    p.pop();\n",
+       "                });\n",
+       "                \n",
+       "                p.noLoop();\n",
        "            }\n",
        "            \n",
-       "            p.background('#fff');\n",
-       "            \n",
-       "            p.objs.forEach(obj => {\n",
-       "                p.push();\n",
-       "                if (\"style\" in obj && obj[\"style\"] != null) {\n",
-       "                    p.setStyle(obj[\"style\"]);\n",
-       "                }\n",
-       "                switch (obj[\"type\"]) {\n",
-       "                    case \"PointE2\": p.drawPointE2(obj); break;\n",
-       "                    case \"Polygons\": p.drawPolygons(obj); break;\n",
-       "                    case \"Polygon\": p.drawPolygon(obj); break;\n",
-       "                    case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
-       "                    case \"CircleE2\": p.drawCircleE2(obj); break;\n",
-       "                    default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
-       "                }\n",
-       "                p.pop();\n",
-       "            });\n",
-       "            \n",
-       "        } \n",
+       "        }\n",
+       "        \n",
+       "        p.keyTyped = function () {\n",
+       "          if (key === 'e') {\n",
+       "            photo.save('photo', 'png');\n",
+       "          }\n",
+       "        }\n",
        "    };\n",
        "})"
       ],
@@ -843,12 +918,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3621b75e1c7749f1a9270c6891fc3ead",
+       "model_id": "25af1da09301409d8413d4772b79f1e7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "E2Sketch(height=500, objects='[{\"type\": \"CircleE2\", \"center\": [0.0, 0.0], \"radius\": 1.0, \"style\": {\"stroke\": \"…"
+       "E2Sketch(objects='[{\"type\": \"CircleE2\", \"center\": [0.0, 0.0], \"radius\": 1.0, \"style\": {\"stroke\": \"#000\", \"stro…"
       ]
      },
      "metadata": {},
@@ -856,10 +931,12 @@
     }
    ],
    "source": [
-    "sols = mutuallyTangent(q2, p2, q3)[0]\n",
+    "sols0 = mutuallyTangent(q2, p2, q3)[0]\n",
+    "sols1 = mutuallyTangent(q3, p3, q1)[0]\n",
+    "sols2 = mutuallyTangent(q1, p1, q2)[0]\n",
     "\n",
     "# We can now view the three points q1, q2, q3 and the tangent disk (styled in red):\n",
-    "viewer = UnitScaleE2Sketch()\n",
+    "viewer = UnitScaleE2Sketch(width=400,height=400)\n",
     "viewer.addAll([\n",
     "    unitDisk, \n",
     "    exampleDisk1, \n",
@@ -871,13 +948,28 @@
     "    (q2, makeStyle(fill=\"#f00\")), \n",
     "    (q3, makeStyle(fill=\"#f00\")), \n",
     "    (DiskOP2.fromPointOP2(q1, q2, q3), makeStyle(stroke=\"#f00\")),\n",
-    "    (sols[0], makeStyle(fill=\"#0f0\")),\n",
-    "    (sols[1], makeStyle(fill=\"#0f0\")),\n",
-    "    (sols[2], makeStyle(fill=\"#0f0\")),\n",
-    "    (DiskOP2.fromPointOP2(*sols), makeStyle(stroke=\"#0f0\"))\n",
+    "    (sols0[0], makeStyle(fill=\"#0f0\")),\n",
+    "    (sols0[1], makeStyle(fill=\"#0f0\")),\n",
+    "    (sols0[2], makeStyle(fill=\"#0f0\")),\n",
+    "    (DiskOP2.fromPointOP2(*sols0), makeStyle(stroke=\"#0f0\")),\n",
+    "    (sols1[0], makeStyle(fill=\"#0f0\")),\n",
+    "    (sols1[1], makeStyle(fill=\"#0f0\")),\n",
+    "    (sols1[2], makeStyle(fill=\"#0f0\")),\n",
+    "    (DiskOP2.fromPointOP2(*sols1), makeStyle(stroke=\"#0f0\")),\n",
+    "    (sols2[0], makeStyle(fill=\"#0f0\")),\n",
+    "    (sols2[1], makeStyle(fill=\"#0f0\")),\n",
+    "    (sols2[2], makeStyle(fill=\"#0f0\")),\n",
+    "    (DiskOP2.fromPointOP2(*sols2), makeStyle(stroke=\"#0f0\"))\n",
     "])\n",
     "viewer.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
