--- a/Tutte_Embeddings.ipynb
+++ b/Tutte_Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -185,35 +185,54 @@
        "                   endpoints[1][0],\n",
        "                   endpoints[1][1]);\n",
        "        }\n",
-       "\n",
+       "        \n",
+       "        p.drawCircleArcE2 = function (arcData) {\n",
+       "            let center = arcData[\"center\"];\n",
+       "            let radius = arcData[\"radius\"];\n",
+       "            let srcAngle = arcData[\"srcAngle\"];\n",
+       "            let targetAngle = arcData[\"targetAngle\"];\n",
+       "            let diameter = 2 * radius;\n",
+       "            \n",
+       "            p.arc(center[0], center[1], diameter, diameter, srcAngle, targetAngle);\n",
+       "        }\n",
+       "/*\n",
+       "\"center\": arc.disk.center.toPointE2(), \n",
+       "                      \"radius\": rad,\n",
+       "                      \"srcAngle\": srcAngle, \n",
+       "                      \"targetAngle\": targetAngle}\n",
+       "                      */\n",
        "        p.draw = function () {\n",
        "            \n",
-       "            p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
-       "            p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
-       "            \n",
-       "            if (_DEBUG) console.log(\"DRAWING\"); \n",
        "            if (model.get('objectsDirty')) {\n",
        "                model.set('objectsDirty', false);\n",
        "                p.objs = JSON.parse(model.get('objects'));\n",
+       "                \n",
+       "                \n",
+       "                p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
+       "                p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
+       "                \n",
+       "            \n",
+       "                p.background('#fff');\n",
+       "\n",
+       "                p.objs.forEach(obj => {\n",
+       "                    p.push();\n",
+       "                    if (\"style\" in obj && obj[\"style\"] != null) {\n",
+       "                        p.setStyle(obj[\"style\"]);\n",
+       "                    }\n",
+       "                    switch (obj[\"type\"]) {\n",
+       "                        case \"PointE2\": p.drawPointE2(obj); break;\n",
+       "                        case \"Polygons\": p.drawPolygons(obj); break;\n",
+       "                        case \"Polygon\": p.drawPolygon(obj); break;\n",
+       "                        case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
+       "                        case \"CircleE2\": p.drawCircleE2(obj); break;\n",
+       "                        case \"CircleArcE2\": p.drawCircleArcE2(obj); break;\n",
+       "                        default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
+       "                    }\n",
+       "                    p.pop();\n",
+       "                });\n",
+       "                \n",
+       "                p.noLoop();\n",
        "            }\n",
-       "            \n",
-       "            p.background('#fff');\n",
-       "            \n",
-       "            p.objs.forEach(obj => {\n",
-       "                p.push();\n",
-       "                if (\"style\" in obj && obj[\"style\"] != null) {\n",
-       "                    p.setStyle(obj[\"style\"]);\n",
-       "                }\n",
-       "                switch (obj[\"type\"]) {\n",
-       "                    case \"PointE2\": p.drawPointE2(obj); break;\n",
-       "                    case \"Polygons\": p.drawPolygons(obj); break;\n",
-       "                    case \"Polygon\": p.drawPolygon(obj); break;\n",
-       "                    case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
-       "                    case \"CircleE2\": p.drawCircleE2(obj); break;\n",
-       "                    default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
-       "                }\n",
-       "                p.pop();\n",
-       "            });\n",
        "            \n",
        "        }\n",
        "        \n",
@@ -235,12 +254,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f5c868ac22342799cbb31d76e919eff",
+       "model_id": "dfff1c7f2c4848a2b800adaf5efc6aa8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "E2Sketch(height=500, objects='[{\"type\": \"SegmentE2\", \"endpoints\": [[-0.4326004383213151, -0.15583135419793673]…"
+       "E2Sketch(height=500, objects='[{\"type\": \"SegmentE2\", \"endpoints\": [[-0.06643576358753521, 0.11425448787388477]…"
       ]
      },
      "metadata": {},
@@ -257,13 +276,6 @@
     "    viewer.setStyle(seg, makeStyle(stroke=\"#000\", strokeWeight=0.5))\n",
     "viewer.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
