--- a/Construction Example - Sphere with three disks.ipynb
+++ b/Construction Example - Sphere with three disks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +185,36 @@
        "            p.ellipse(0, 0, diameter, diameter, 48);\n",
        "            \n",
        "        }\n",
+       "        \n",
+       "        p.drawPolygon = function(polygonData) {\n",
+       "            let polygon = polygonData[\"vertices\"];\n",
+       "            p.beginShape();\n",
+       "            polygon.forEach(v => {\n",
+       "                p.vertex(v[0], v[1], v[2]);\n",
+       "            });\n",
+       "            p.endShape();\n",
+       "        }\n",
+       "        \n",
+       "        p.drawPolygons = function (polygonsData) {\n",
+       "            let polygons = polygonsData[\"polygons\"];\n",
+       "            polygons.forEach(polygon => {\n",
+       "                p.beginShape();\n",
+       "                polygon.forEach(v => {\n",
+       "                    p.vertex(v[0], v[1], v[2]);\n",
+       "                });\n",
+       "                p.endShape();\n",
+       "            });\n",
+       "        }\n",
+       "        \n",
+       "        p.drawSegmentE3 = function (segData) {\n",
+       "            let endpoints = segData[\"endpoints\"];\n",
+       "            p.line(endpoints[0][0],\n",
+       "                   endpoints[0][1],\n",
+       "                   endpoints[0][2],\n",
+       "                   endpoints[1][0],\n",
+       "                   endpoints[1][1],\n",
+       "                   endpoints[1][2]);\n",
+       "        }\n",
        "\n",
        "        p.draw = function () {\n",
        "            \n",
@@ -195,21 +225,6 @@
        "            }\n",
        "            \n",
        "            p.background('#fff');\n",
-       "//             let t = p.frameCount;\n",
-       "//             let n = model.get('n_cubes');\n",
-       "//             p.randomSeed(42);\n",
-       "//             _.range(n).forEach(i => {\n",
-       "//                 const R = 180 //+ 30 * p.sin(t * 0.2 + i);\n",
-       "//                 const x = R * p.cos(i * p.TWO_PI / n);\n",
-       "//                 const y = R * p.sin(i* p.TWO_PI / n);\n",
-       "//                 p.push();\n",
-       "//                 p.translate(x, y);\n",
-       "//                 p.fill(p.random(255), p.random(255), p.random(255));\n",
-       "//                 p.rotateY(t * 0.05 + i);\n",
-       "//                 p.box(50);\n",
-       "//                 p.pop();\n",
-       "//             });\n",
-       "            \n",
        "            \n",
        "            p.orbitControl(5, 5);\n",
        "            //p.translate(p.width / 2.0, p.height / 2.0, 0.0);\n",
@@ -221,7 +236,8 @@
        "            p.noStroke();\n",
        "            p.lights();\n",
        "            //p.sphereDetail(200);\n",
-       "            p.sphere(0.999, 96, 64);\n",
+       "            if (model.get('showSphere'))\n",
+       "                p.sphere(0.999, 96, 64);\n",
        "            //p.sphereDetail(30);\n",
        "            \n",
        "            p.objs.forEach(obj => {\n",
@@ -232,6 +248,9 @@
        "                switch (obj[\"type\"]) {\n",
        "                    case \"DiskS2\": p.drawDiskS2(obj); break;\n",
        "                    case \"PointE3\": p.drawPointE3(obj); break;\n",
+       "                    case \"Polygons\": p.drawPolygons(obj); break;\n",
+       "                    case \"Polygon\": p.drawPolygon(obj); break;\n",
+       "                    case \"SegmentE3\": p.drawSegmentE3(obj); break;\n",
        "                    default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
        "                }\n",
        "                p.pop();\n",
@@ -263,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04693cdec6414a7e846789fed6383d0f",
+       "model_id": "c0a545fcd041482d8877d311e82dee79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,6 +299,7 @@
     "from koebe.graphics.spherical2viewer import *\n",
     "\n",
     "viewer = S2Viewer(600,600)\n",
+    "\n",
     "\n",
     "disk0 = DiskS2(1.05,0,0,-1)\n",
     "disk1 = DiskS2(0,1.05,0,-1)\n",
@@ -319,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
