--- a/RandomPolyhedraExample.ipynb
+++ b/RandomPolyhedraExample.ipynb
@@ -137,7 +137,9 @@
        "                p.noStroke();\n",
        "                p.fill(100, 125, 255);\n",
        "            }\n",
-       "            p.sphere(0.035, 8, 8);\n",
+       "            //p.sphereDetail(2);\n",
+       "            //p.sphere(0.035, 8, 8);\n",
+       "            p.box(0.035);\n",
        "        }\n",
        "        \n",
        "        p.drawDiskS2 = function (diskData) {\n",
@@ -170,20 +172,20 @@
        "                0, 0, 0, 1\n",
        "            );\n",
        "            \n",
-       "            if (_DEBUG) {\n",
-       "                console.log(\"applying matrix\\n\" +       \n",
-       "                    b1[0] + \" \" + b2[0] + \" \" + b3[0] + \" \" + 0 + \"\\n\" + \n",
-       "                    b1[1] + \" \" + b2[1] + \" \" + b3[1] + \" \" + 0 + \"\\n\" + \n",
-       "                    b1[2] + \" \" + b2[2] + \" \" + b3[2] + \" \" + 0 + \"\\n\" + \n",
-       "                    \"0 0 0 1\"\n",
-       "                );\n",
-       "            }\n",
+       "//             if (_DEBUG) {\n",
+       "//                 console.log(\"applying matrix\\n\" +       \n",
+       "//                     b1[0] + \" \" + b2[0] + \" \" + b3[0] + \" \" + 0 + \"\\n\" + \n",
+       "//                     b1[1] + \" \" + b2[1] + \" \" + b3[1] + \" \" + 0 + \"\\n\" + \n",
+       "//                     b1[2] + \" \" + b2[2] + \" \" + b3[2] + \" \" + 0 + \"\\n\" + \n",
+       "//                     \"0 0 0 1\"\n",
+       "//                 );\n",
+       "//             }\n",
        "            \n",
        "            if (disk[3] < 0) {\n",
-       "                if (_DEBUG) console.log(\"translate \" + centerDist);\n",
+       "//                 if (_DEBUG) console.log(\"translate \" + centerDist);\n",
        "                p.translate(0, 0,  centerDist);\n",
        "            } else {\n",
-       "                if (_DEBUG) console.log(\"translate \" + (-centerDist));\n",
+       "//                 if (_DEBUG) console.log(\"translate \" + (-centerDist));\n",
        "                p.translate(0, 0, -centerDist);\n",
        "            }\n",
        "            \n",
@@ -227,7 +229,6 @@
        "\n",
        "        p.draw = function () {\n",
        "            \n",
-       "            if (_DEBUG) console.log(\"DRAWING\"); \n",
        "            if (model.get('objectsDirty')) {\n",
        "                model.set('objectsDirty', false);\n",
        "                p.objs = JSON.parse(model.get('objects'));\n",
@@ -245,6 +246,7 @@
        "            p.noStroke();\n",
        "            p.lights();\n",
        "            //p.sphereDetail(200);\n",
+       "            //p.sphereDetail(30);\n",
        "            if (model.get('showSphere'))\n",
        "                p.sphere(0.999, 96, 64);\n",
        "            //p.sphereDetail(30);\n",
@@ -279,12 +281,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b537b929a0e475eaf2458878bd53840",
+       "model_id": "ae0aa2f7a42e47e5b302842da5424d4a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "S2Sketch(height=600, objects='[{\"type\": \"PointE3\", \"point\": [0.12979147048160627, -0.278294792715304, -0.96218…"
+       "S2Sketch(height=600, objects='[{\"type\": \"SegmentE3\", \"endpoints\": [[0.09402495715311751, -0.04843487676389414,…"
       ]
      },
      "metadata": {},
@@ -304,22 +306,15 @@
     "viewer.toggleSphere() # Hide the sphere\n",
     "polyhedron = randomConvexHullE3(100)\n",
     "\n",
-    "viewer.addAll(polyhedron.verts)\n",
     "viewer.addAll(polyhedron.edges)\n",
-    "viewer.addAll(polyhedron.faces)\n",
     "\n",
-    "# Set each face to a random color:\n",
-    "for i in range(len(polyhedron.faces)):\n",
-    "    viewer.setStyle(polyhedron.faces[i], \n",
-    "                makeStyle(fill = \"hsl(\" + str(random.randint(0, 255)) \n",
-    "                                  + \", 100%, 50%)\"))\n",
     "\n",
     "viewer.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +440,9 @@
        "                p.noStroke();\n",
        "                p.fill(100, 125, 255);\n",
        "            }\n",
-       "            p.sphere(0.035, 8, 8);\n",
+       "            //p.sphereDetail(2);\n",
+       "            //p.sphere(0.035, 8, 8);\n",
+       "            p.box(0.035);\n",
        "        }\n",
        "        \n",
        "        p.drawDiskS2 = function (diskData) {\n",
@@ -478,20 +475,20 @@
        "                0, 0, 0, 1\n",
        "            );\n",
        "            \n",
-       "            if (_DEBUG) {\n",
-       "                console.log(\"applying matrix\\n\" +       \n",
-       "                    b1[0] + \" \" + b2[0] + \" \" + b3[0] + \" \" + 0 + \"\\n\" + \n",
-       "                    b1[1] + \" \" + b2[1] + \" \" + b3[1] + \" \" + 0 + \"\\n\" + \n",
-       "                    b1[2] + \" \" + b2[2] + \" \" + b3[2] + \" \" + 0 + \"\\n\" + \n",
-       "                    \"0 0 0 1\"\n",
-       "                );\n",
-       "            }\n",
+       "//             if (_DEBUG) {\n",
+       "//                 console.log(\"applying matrix\\n\" +       \n",
+       "//                     b1[0] + \" \" + b2[0] + \" \" + b3[0] + \" \" + 0 + \"\\n\" + \n",
+       "//                     b1[1] + \" \" + b2[1] + \" \" + b3[1] + \" \" + 0 + \"\\n\" + \n",
+       "//                     b1[2] + \" \" + b2[2] + \" \" + b3[2] + \" \" + 0 + \"\\n\" + \n",
+       "//                     \"0 0 0 1\"\n",
+       "//                 );\n",
+       "//             }\n",
        "            \n",
        "            if (disk[3] < 0) {\n",
-       "                if (_DEBUG) console.log(\"translate \" + centerDist);\n",
+       "//                 if (_DEBUG) console.log(\"translate \" + centerDist);\n",
        "                p.translate(0, 0,  centerDist);\n",
        "            } else {\n",
-       "                if (_DEBUG) console.log(\"translate \" + (-centerDist));\n",
+       "//                 if (_DEBUG) console.log(\"translate \" + (-centerDist));\n",
        "                p.translate(0, 0, -centerDist);\n",
        "            }\n",
        "            \n",
@@ -535,7 +532,6 @@
        "\n",
        "        p.draw = function () {\n",
        "            \n",
-       "            if (_DEBUG) console.log(\"DRAWING\"); \n",
        "            if (model.get('objectsDirty')) {\n",
        "                model.set('objectsDirty', false);\n",
        "                p.objs = JSON.parse(model.get('objects'));\n",
@@ -553,6 +549,7 @@
        "            p.noStroke();\n",
        "            p.lights();\n",
        "            //p.sphereDetail(200);\n",
+       "            //p.sphereDetail(30);\n",
        "            if (model.get('showSphere'))\n",
        "                p.sphere(0.999, 96, 64);\n",
        "            //p.sphereDetail(30);\n",
@@ -587,12 +584,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8fb93d0127d422eb998fc457f842bbe",
+       "model_id": "fe9876ae0a3941279f7dfa46b250656f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "S2Sketch(height=600, objects='[{\"type\": \"PointE3\", \"point\": [0.12979147048160627, -0.278294792715304, -0.96218…"
+       "S2Sketch(height=600, objects='[{\"type\": \"PointE3\", \"point\": [0.09402495715311751, -0.04843487676389414, 1.0044…"
       ]
      },
      "metadata": {},
@@ -626,22 +623,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "MalformedDCELException",
-     "evalue": "inDarts() collected more darts than should exist",
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMalformedDCELException\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-a9f7694bf5db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mpoly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mverts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/Jupyter Notebooks/koebe.py/koebe/datastructures/dcel.py\u001b[0m in \u001b[0;36mremove\u001b[0;34m(self, newFaceData)\u001b[0m\n\u001b[1;32m    137\u001b[0m     \u001b[0;31m# Almost certainly doesn't work with degree 2 vertices\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewFaceData\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 139\u001b[0;31m         \u001b[0mindarts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minDarts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    140\u001b[0m         \u001b[0moutdarts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdart\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdart\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mindarts\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    141\u001b[0m         \u001b[0mcurr_edges\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medges\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/Jupyter Notebooks/koebe.py/koebe/datastructures/dcel.py\u001b[0m in \u001b[0;36minDarts\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    121\u001b[0m             \u001b[0mcurr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtwin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprev\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdcel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdarts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mMalformedDCELException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"inDarts() collected more darts than should exist\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    124\u001b[0m             \u001b[0mi\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mcurr\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maDart\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtwin\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mMalformedDCELException\u001b[0m: inDarts() collected more darts than should exist"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-a9f7694bf5db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mpoly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mverts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Documents/Jupyter Notebooks/koebe.py/koebe/datastructures/dcel.py\u001b[0m in \u001b[0;36mremove\u001b[0;34m(self, newFaceData)\u001b[0m\n\u001b[1;32m    211\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdcel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medges\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medge\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mface\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcurr_faces\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 213\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdcel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfaces\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mface\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    214\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    215\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mnewFace\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
      ]
     }
    ],
@@ -654,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +776,9 @@
        "                p.noStroke();\n",
        "                p.fill(100, 125, 255);\n",
        "            }\n",
-       "            p.sphere(0.035, 8, 8);\n",
+       "            //p.sphereDetail(2);\n",
+       "            //p.sphere(0.035, 8, 8);\n",
+       "            p.box(0.035);\n",
        "        }\n",
        "        \n",
        "        p.drawDiskS2 = function (diskData) {\n",
@@ -813,20 +811,20 @@
        "                0, 0, 0, 1\n",
        "            );\n",
        "            \n",
-       "            if (_DEBUG) {\n",
-       "                console.log(\"applying matrix\\n\" +       \n",
-       "                    b1[0] + \" \" + b2[0] + \" \" + b3[0] + \" \" + 0 + \"\\n\" + \n",
-       "                    b1[1] + \" \" + b2[1] + \" \" + b3[1] + \" \" + 0 + \"\\n\" + \n",
-       "                    b1[2] + \" \" + b2[2] + \" \" + b3[2] + \" \" + 0 + \"\\n\" + \n",
-       "                    \"0 0 0 1\"\n",
-       "                );\n",
-       "            }\n",
+       "//             if (_DEBUG) {\n",
+       "//                 console.log(\"applying matrix\\n\" +       \n",
+       "//                     b1[0] + \" \" + b2[0] + \" \" + b3[0] + \" \" + 0 + \"\\n\" + \n",
+       "//                     b1[1] + \" \" + b2[1] + \" \" + b3[1] + \" \" + 0 + \"\\n\" + \n",
+       "//                     b1[2] + \" \" + b2[2] + \" \" + b3[2] + \" \" + 0 + \"\\n\" + \n",
+       "//                     \"0 0 0 1\"\n",
+       "//                 );\n",
+       "//             }\n",
        "            \n",
        "            if (disk[3] < 0) {\n",
-       "                if (_DEBUG) console.log(\"translate \" + centerDist);\n",
+       "//                 if (_DEBUG) console.log(\"translate \" + centerDist);\n",
        "                p.translate(0, 0,  centerDist);\n",
        "            } else {\n",
-       "                if (_DEBUG) console.log(\"translate \" + (-centerDist));\n",
+       "//                 if (_DEBUG) console.log(\"translate \" + (-centerDist));\n",
        "                p.translate(0, 0, -centerDist);\n",
        "            }\n",
        "            \n",
@@ -870,7 +868,6 @@
        "\n",
        "        p.draw = function () {\n",
        "            \n",
-       "            if (_DEBUG) console.log(\"DRAWING\"); \n",
        "            if (model.get('objectsDirty')) {\n",
        "                model.set('objectsDirty', false);\n",
        "                p.objs = JSON.parse(model.get('objects'));\n",
@@ -888,6 +885,7 @@
        "            p.noStroke();\n",
        "            p.lights();\n",
        "            //p.sphereDetail(200);\n",
+       "            //p.sphereDetail(30);\n",
        "            if (model.get('showSphere'))\n",
        "                p.sphere(0.999, 96, 64);\n",
        "            //p.sphereDetail(30);\n",
@@ -914,20 +912,6 @@
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cfbfee71ee047c6bd0778fb433f2adc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "S2Sketch(height=600, objects='[{\"type\": \"PointE3\", \"point\": [0.624105710783585, 0.121381472337374, 0.784766589…"
       ]
      },
      "metadata": {},
